--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase-admin": "^11.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.7.0"
   }
 }
