--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
     "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.0",
     "validator": "^13.7.0"
   }
 }
