--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "firebase-admin": "^11.8.0",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.6",
     "multer": "^1.4.5-lts.1",
-    "uuid": "^9.0.0",
-    "validator": "^13.7.0"
+    "uuid": "^9.0.0"
   }
 }
